# oop-2025

Лекции/ИС/02-структури/: enums.cpp
Лекции/ИС/03-файлове/: address.cpp  address.h  files1.cpp  files3.cpp  iohelpers.h  student.cpp  student.h
Лекции/ИС/Operators1/: logger.hpp
Лекции/ИС/Връзки в обекти/: person.cpp  person.hpp
Лекции/ИС/Наследяване1/: circle.cpp  circle.hpp  filled_circle.cpp  filled_circle.hpp  main.cpp  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp  shape.cpp  shape.hpp
Лекции/ИС/Наследяване2/: circle.cpp  circle.hpp  filled_circle.cpp  filled_circle.hpp  main.cpp  point.hpp  rectangle.cpp  rectangle.hpp  shape.cpp  shape.hpp  shape_factory.hpp  square.cpp
Лекции/ИС/Оператори1/: main.cpp  vector.cpp  vector.hpp
Лекции/ИС/Оператори2/: sorted_array.cpp  sorted_array.hpp
Лекции/ИС/Шаблони/: CRTP-Final.cpp  CRTP-ObjCounter.cpp  array.hpp  array2.cpp  array_test.cpp  auto_ptr.hpp  finder.cpp  test_ptr.cpp
Лекции/Информатика/: note.txt
Лекции/Информатика/01-УП/: funPtr.cpp  mainArg.cpp  preprocess.cpp
Практикум/Информатика/Група 2/: README.md
Практикум/Информатика/Група 4/: README.md
Практикум/Информационни Системи/Група 2/: init.txt
Семинари/Информатика/Група 1/: Задачи 1.md  Задачи 2.md  Задачи 4.md  Задачи3.md
Семинари/Информатика/Група 4/11_inheritance/solution/: AbstractFurnitureCatalog.hpp  Bed.cpp  Bed.hpp  CMakeLists.txt  Chair.cpp  Chair.hpp  Furniture.cpp  Furniture.hpp  InMemoryFurnitureCatalog.cpp  InMemoryFurnitureCatalog.hpp  StringHelpers.hpp  Table.cpp  Table.hpp  main.cpp
(+383 files in other folders)
